[package]
name = "QRFS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2.16"
time = "0.1"
bincode = "1.3.3"
serde-big-array = "0.1.5"